--- a/css/estilos.css
+++ b/css/estilos.css
@@ -319,24 +319,40 @@ main .hombre-mujer {
             margin-top: 10px; }
       .calzado-pag .calzado-contenedor .productos .agregarCarrito {
         background-color: black;
-        color: white; }
+        color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        font-size: 13px;
+        padding: 3px; }
       .calzado-pag .calzado-contenedor .productos .agregarCarrito:hover {
         background-color: gray; }
-    .calzado-pag .calzado-contenedor #carritoContenedor .imagen-carrito {
-      width: 220px;
-      height: 220px; }
-    .calzado-pag .calzado-contenedor #carritoContenedor .quitarDelCarritoBtn {
-      background-color: black;
-      color: white;
-      border: 1px solid black; }
-    .calzado-pag .calzado-contenedor #carritoContenedor .quitarDelCarritoBtn:hover {
-      background-color: gray; }
-    .calzado-pag .calzado-contenedor #carritoContenedor .vaciarCarritoBtn {
-      color: black;
-      background-color: bisque;
-      border: 1px solid black; }
-    .calzado-pag .calzado-contenedor #carritoContenedor .vaciarCarritoBtn:hover {
-      background-color: #e5af5f; }
+    .calzado-pag .calzado-contenedor #carritoContenedor {
+      margin-top: 20px;
+      justify-content: center;
+      text-align: center; }
+      .calzado-pag .calzado-contenedor #carritoContenedor h3 {
+        font-size: 20px; }
+      .calzado-pag .calzado-contenedor #carritoContenedor .imagen-carrito {
+        width: 220px;
+        height: 220px; }
+      .calzado-pag .calzado-contenedor #carritoContenedor .quitarDelCarritoBtn {
+        background-color: black;
+        color: white;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 3px; }
+      .calzado-pag .calzado-contenedor #carritoContenedor .quitarDelCarritoBtn:hover {
+        background-color: gray; }
+      .calzado-pag .calzado-contenedor #carritoContenedor .vaciarCarritoBtn {
+        color: black;
+        background-color: bisque;
+        border: 1px solid black;
+        border-color: rgba(0, 0, 0, 0.316);
+        border-radius: 5px;
+        margin-top: 5px;
+        padding: 3px; }
+      .calzado-pag .calzado-contenedor #carritoContenedor .vaciarCarritoBtn:hover {
+        background-color: #e5af5f; }
 
 .indumentaria-pag {
   display: flex;
