--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -223,13 +223,14 @@ main{
 
 .calzado-pag {
     height: auto;
-    display: flex;
+    display: grid;
+    grid-template-columns: 20% 80%;
     width: 100%;
     margin-top: 50px;
     .calzado-filtro{
         display: flex;
         flex-direction: column;
-        width: 20%;
+        width: 100%;
         div{
             width: 100%;
             margin-bottom: 30px;
@@ -255,35 +256,32 @@ main{
             }
         }
     }
-    .calzado-contenedor{
-        width: 100%;
+    #contenedorProductos{
+        width: 100;
         display: flex;
-        justify-content: center;
         flex-wrap: wrap;
-        margin-bottom: 50px;
+        justify-content: space-evenly;
+        gap: 20px;
+        }
         .productos{
             @extend %flex;
             flex-direction: column;
             margin: 12px;
             padding: 3px;
+            width: 300px;
+            height: auto;
             a{
                 text-decoration: none;
                 color: $color-primario;
                 text-align: center;
-                justify-content: center;
-                width: 270px;
-                height: auto;
                 img{
                     width: 220px;
                     height: 220px;
-                    text-align: center;
-                    justify-content: center;
                     border-radius: 3%;
                 
                 }
                 h3{
                     text-align: center;
-                    justify-content: center;
                     font-family: 'Lato', sans-serif;
                     font-size: 14px;
                     width: 270px;
@@ -320,64 +318,64 @@ main{
                 background-color: gray;
             }
         }
-        #carritoContenedor{
-            margin-top: 20px;
-            margin-right: 150px;
-            justify-content: center;
-            text-align: center;
-            h3{
+    #carritoContenedor {
+        width: 80%;
+        margin: 50px auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        }
+        h3{
+            font-size: 20px;
+        }
+        .imagen-carrito{
+            width: 220px;
+            height: 220px;
+        }
+        .quitarDelCarritoBtn{
+            background-color: $color-primario;
+            color: $color-secundario;
+            border: map-get($boton, border-boton);
+            border-radius: 5px;
+            padding: 3px;
+        }
+        .quitarDelCarritoBtn:hover{
+            background-color: gray;
+        }
+        div{
+            margin: 20px;
+            b{
+                margin: 20px;
                 font-size: 20px;
             }
-            .imagen-carrito{
-                width: 220px;
-                height: 220px;
-            }
-            .quitarDelCarritoBtn{
-                background-color: $color-primario;
-                color: $color-secundario;
-                border: map-get($boton, border-boton);
-                border-radius: 5px;
-                padding: 3px;
-            }
-            .quitarDelCarritoBtn:hover{
-                background-color: gray;
-            }
-            div{
-                margin: 20px;
-                b{
-                    margin: 20px;
-                    font-size: 20px;
-                }
-            }
-            .vaciarCarritoBtn{
-                color: $color-primario;
-                background-color: bisque;
-                border: map-get($boton, border-boton);
-                border-color: rgba(0, 0, 0, 0.316);
-                border-radius: 5px;
-                margin-top: 5px;
-                padding: 3px;
-                margin: 6px
-            }
-            .vaciarCarritoBtn:hover{
-                background-color:rgb(229, 175, 95);
-            }
-            .comprarBtn{
-                color: $color-primario;
-                background-color: rgb(204, 171, 235);
-                border: map-get($boton, border-boton);
-                border-color: rgba(0, 0, 0, 0.316);
-                border-radius: 5px;
-                margin-top: 5px;
-                padding: 3px;
-                margin: 6px;
-            }
-            .comprarBtn:hover{
-                background-color: rgb(176, 113, 234);
-            }           
         }
+        .vaciarCarritoBtn{
+            color: $color-primario;
+            background-color: bisque;
+            border: map-get($boton, border-boton);
+            border-color: rgba(0, 0, 0, 0.316);
+            border-radius: 5px;
+            margin-top: 5px;
+            padding: 3px;
+            margin: 6px
+        }
+        .vaciarCarritoBtn:hover{
+            background-color:rgb(229, 175, 95);
+        }
+        .comprarBtn{
+            color: $color-primario;
+            background-color: rgb(204, 171, 235);
+            border: map-get($boton, border-boton);
+            border-color: rgba(0, 0, 0, 0.316);
+            border-radius: 5px;
+            margin-top: 5px;
+            padding: 3px;
+            margin: 6px;
+        }
+        .comprarBtn:hover{
+            background-color: rgb(176, 113, 234);
+        }           
     }
-}
+
 
 .indumentaria-pag {
     display: flex;
